manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian-wiki
  namespace: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obsidian-wiki
  template:
    metadata:
      labels:
        app: obsidian-wiki
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: obsidian-wiki
          image: ghcr.io/kkw855/obsidian-wiki:0d2ea8f4cc34b296ff423abe2596e2863be998b9
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: obsidian-wiki-service
  namespace: wiki
spec:
  selector:
    app: obsidian-wiki
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
