manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-wiki-ingress
  namespace: wiki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  ingressClassName: traefik
  rules:
    - host: wiki.end-soul.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian-wiki-service
                port:
                  number: 80
  tls:
    - hosts:
        - wiki.end-soul.com
      secretName: obsidian-wiki-tls
